--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../tutorial/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=..\\PRJ302\\tutorial\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=../PRJ302/tutorial/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../tutorial/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=..\\PRJ302\\tutorial\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=../PRJ302/tutorial/jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=../tutorial/jaxb-api-2.1.jar
-file.reference.jaxb-api-2.1.jar-1=..\\PRJ302\\tutorial\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.1.jar-1=../PRJ302/tutorial/jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar=../tutorial/sqljdbc42.jar
-file.reference.sqljdbc42.jar-1=..\\PRJ302\\tutorial\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=../PRJ302/tutorial/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -93,6 +93,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Test_English2.war
+war.name=Test_English.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
